--- a/package.json
+++ b/package.json
@@ -5,18 +5,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write {pages,lib}/**/*.{js,ts,tsx}"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.7.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@prisma/client": "^3.7.0",
+    "cors": "^2.8.5",
+    "framer-motion": "^4.1.17",
     "next": "12.0.7",
+    "next-connect": "^0.11.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.34.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "2.5.1",
+    "prisma": "^3.7.0",
     "typescript": "4.5.4"
   }
 }
