--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/cors": "^2.8.12",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
+    "cypress": "^9.2.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
