--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write {pages,lib}/**/*.{js,ts,tsx}"
+    "format": "prettier --write {pages,lib}/**/*.{js,ts,tsx}",
+    "test": "npx jest"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.7.3",
@@ -22,15 +23,22 @@
     "react-query": "^3.34.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/cors": "^2.8.12",
+    "@types/jest": "^27.0.3",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
+    "@types/testing-library__jest-dom": "^5.14.2",
     "cypress": "^9.2.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
+    "jest": "^27.4.5",
     "prettier": "2.5.1",
     "prisma": "^3.7.0",
-    "typescript": "4.5.4"
+    "ts-jest": "^27.1.2",
+    "typescript": "^4.5.4"
   }
 }
