--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "framer-motion": "^4.1.17",
     "next": "12.0.7",
+    "next-auth": "^4.0.6",
     "next-connect": "^0.11.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
