--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "jest": "^27.4.5",
+    "node-mocks-http": "^1.11.0",
     "prettier": "2.5.1",
     "prisma": "^3.7.0",
     "ts-jest": "^27.1.2",
