--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next-connect": "^0.11.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "^3.34.5"
+    "react-query": "^3.34.5",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
