--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.34.5",
-    "yarn": "^1.22.17"
+    "yarn": "^1.22.17",
+    "zod": "^3.11.6"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
