--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "next": "12.0.7",
     "next-auth": "^4.0.6",
     "next-connect": "^0.11.0",
+    "next-swagger-doc": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.34.5",
+    "swagger-ui-react": "^4.5.2",
     "zod": "^3.11.6"
   },
   "devDependencies": {
@@ -35,6 +37,7 @@
     "@types/jest": "^27.0.3",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
+    "@types/swagger-ui-react": "^4.1.1",
     "@types/testing-library__jest-dom": "^5.14.2",
     "cypress": "^9.2.0",
     "eslint": "8.5.0",
