--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
           # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
           # We are using Node.js 14 because it is the current LTS version
           node-version: 14.x  
-
+      - uses: mansona/npm-lockfile-version@v1
       - run: npm ci
       - run: npx prisma migrate deploy
       - run: npm run prepush
