--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.6.0",
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.7.0",
+    "axios": "^0.26.1",
     "cors": "^2.8.5",
     "framer-motion": "^4.1.17",
     "next": "12.0.7",
@@ -45,6 +46,7 @@
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "jest": "^27.4.5",
+    "jest-mock-extended": "^2.0.4",
     "node-mocks-http": "^1.11.0",
     "prettier": "2.5.1",
     "prisma": "^3.7.0",
