--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.6.0",
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.7.0",
+    "aws-sdk": "^2.1126.0",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "framer-motion": "^4.1.17",
