--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^3.15.0-dev.24",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "framer-motion": "^4.1.17",
     "next": "12.1.1",
     "next-auth": "^4.0.6",
