--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 80",
     "lint": "next lint",
     "check": "prettier --check {pages,lib}/**/*.{js,ts,tsx}",
     "format": "prettier --write {pages,lib}/**/*.{js,ts,tsx}",
