--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@emotion/styled": "^11.6.0",
     "@fontsource/poppins": "^4.5.8",
     "@next-auth/prisma-adapter": "^1.0.1",
-    "@prisma/client": "^3.15.0-dev.24",
+    "@prisma/client": "^3.15.2",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "framer-motion": "^4.1.17",
@@ -51,7 +51,7 @@
     "jest-mock-extended": "^2.0.4",
     "node-mocks-http": "^1.11.0",
     "prettier": "2.5.1",
-    "prisma": "^3.7.0",
+    "prisma": "^3.15.2",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   }
